--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
-  "author": "foulk",
+  "author": "oscar",
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,10 @@
     "hardhat": "^2.22.19"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.2.0"
+    "@openzeppelin/contracts": "^5.2.0",
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "@tanstack/react-query": "^5.67.1",
+    "viem": "^2.23.6",
+    "wagmi": "^2.14.12"
   }
 }
