--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,11 @@
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true
-  }
+  },
+  "include": [
+    "hardhat/types",
+    "artifacts/contracts/**/*.ts",
+    "scripts/**/*.ts",
+    "test/**/*.ts"
+  ]
 }
