--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.0",
-    "hardhat": "^2.22.19"
+    "chai": "^5.2.0",
+    "hardhat": "^2.22.19",
+    "viem": "^2.23.6"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.67.1",
-    "viem": "^2.23.6",
     "wagmi": "^2.14.12"
   }
 }
