--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.0",
-    "chai": "^5.2.0",
     "hardhat": "^2.22.19",
+    "typescript": "^5.8.2",
     "viem": "^2.23.6"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.67.1",
+    "chai": "^4.3.7",
     "wagmi": "^2.14.12"
   }
 }
