--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@openzeppelin/contracts": "^5.2.0",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.67.1",
+    "dotenv": "^16.4.7",
     "wagmi": "^2.14.12"
   }
 }
