--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.4",
+    "@tanstack/react-query": "^5.67.1",
     "ethers": "^6.13.5",
     "next": "^15.2.1",
     "react": "^19.0.0",
