--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.67.1",
     "chai": "^4.5.0",
+    "ethers": "^6.13.5",
     "wagmi": "^2.14.12"
   }
 }
